tests/ui/imports/import-loop.stderr
error[E0432]: unresolved import `y`
  --> $DIR/import-loop.rs:6:13
   |
LL |     pub use y::x;
   |             ^ help: a similar path exists: `crate::y`
   |
   = note: `use` statements changed in Rust 2018; read more at <https://doc.rust-lang.org/edition-guide/rust-2018/module-system/path-clarity.html>

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
